--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "firebase": "^10.6.0",
+    "fotmob": "^1.1.0",
     "next": "13.5.3",
     "postcss": "8.4.31",
     "react": "18.2.0",
